@@ -18,6 +18,7 @@ $Id$
           handling a certain number of pages
 	- implemented "maxblocks" variable to force PC to hang up after
 	  transmitting a certain number of blocks
+	- added email debugging to PagingCentral.pm
 
 0.9.8: (30Jan2001)
 	- further updates to Device::SerialPort and associated documentation
